--- a/notes/2022-09-22_trabajo.md
+++ b/notes/2022-09-22_trabajo.md
@@ -15,4 +15,15 @@ KUKA, quitando todos las funciones *EQU* y el *MOV* para cada modeleo por
 un *Array* el cual contiene todos los modeloas hasta ahora, y el index de este
 sera el dato(INT) que se maneja en la pantalla Delta.
 
+## Pascal:
+***STATUS:***
+Incompleto.
+
+TODO:
+- [x] Cablear Clamps.
+- [ ] Cablear IO buhller --> Pascal.
+  - in progress
+- [ ] Connect the 5.3 board.
+- [ ] To check funcionality of the clamps,
+- [ ] Upgrade Machine firmware.
 
