major changes to MD notes, and  add  python shell llp.

--- a/notes/2022-09-22_trabajo.md
+++ b/notes/2022-09-22_trabajo.md
@@ -1,4 +1,14 @@
-# Proyectos:
+## Proyectos:
+
+<!-- vim-markdown-toc GFM -->
+
+* [Rastreabilidad:](#rastreabilidad)
+  * [Celda 2](#celda-2)
+  * [Mejoras:](#mejoras)
+* [Pascal:](#pascal)
+* [Status Amplificadores de Prensas de Corte Area DieCast:](#status-amplificadores-de-prensas-de-corte-area-diecast)
+
+<!-- vim-markdown-toc -->
 
 ## Rastreabilidad:
 
@@ -21,9 +31,29 @@ Incompleto.
 
 TODO:
 - [x] Cablear Clamps.
-- [ ] Cablear IO buhller --> Pascal.
+- [x] Cablear IO buhller --> Pascal.
   - in progress
-- [ ] Connect the 5.3 board.
-- [ ] To check funcionality of the clamps,
-- [ ] Upgrade Machine firmware.
+- [x] Connect the 5.3 board.
+- [x] To check funcionality of the clamps,
+- [ ] Upgrade Machine firmware. 2022-09-30 
+
+## Status Amplificadores de Prensas de Corte Area DieCast:
+
+|Trim#|Status|
+| --- | ---- |
+|1    | NOK  |
+|2    | NOK  |
+|3    | NOK  |
+|4    | OK   |
+|5    | NOK  |
+|6    | NOK  |
+|7    | NOK  |
+|8    | NOK  |
+|9    | NOK  |
+|10   | N/A  |
+|11   | NOK  |
+|12   | NOK  |
+|13   | NOK  |
+|14   | NOK  |
+|15   | NOK  |
 
