--- a/notes/202210020940_bitacora.md
+++ b/notes/202210020940_bitacora.md
@@ -37,5 +37,6 @@ author: Javier Pacheco
 - 2 Argon.
 - 1 Azufre.
 
-# [Formato de tiempo extra.][S:/AMMCommon/CMM Molding/Die Cast/17 Mantenimiento/Javier Pacheco/textra/]
-# [Partview][http://erp/cgi-bit/rpgle/cgipartvw3.pgm]
+[Formato de tiempo extra.][S:/AMMCommon/CMM Molding/Die Cast/17 Mantenimiento/Javier Pacheco/textra/]
+
+[Partview][http://erp/cgi-bit/rpgle/cgipartvw3.pgm]
