update notes, leadergg to lazygit

--- a/notes/202210020940_bitacora.md
+++ b/notes/202210020940_bitacora.md
@@ -37,6 +37,10 @@ author: Javier Pacheco
 - 2 Argon.
 - 1 Azufre.
 
+## 2022-10-17 
+- 2 tanques de argon --> Dispatch Number: 3424475 
+- 2501 Nitrogeno liquido --> Dispatch Number: 3424518
+
 [Formato de tiempo extra.][S:/AMMCommon/CMM Molding/Die Cast/17 Mantenimiento/Javier Pacheco/textra/]
 
 [Partview][http://erp/cgi-bit/rpgle/cgipartvw3.pgm]
